<resources>
    <string name="app_name">MiTAnto</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_data">Datos</string>
    <string name="title_statistics">Estadísticas</string>
    <string name="title_others">Otros</string>
    <string name="menu_inicio">Inicio</string>
    <string name="menu_exportar_datos">Exportar datos</string>
    <string name="menu_preferencias">Preferencias</string>
    <string name="menu_statistics">Estadística</string>
    <string name="menu_añadir_inventario">Añadir Inventario</string>
    <string name="menu_añadir_almacen">Añadir Almacén</string>
    <string name="menu_añadir_datos">Añadir Datos</string>
    <string name="menu_añadir_producto">Añadir Producto</string>
    <string name="menu_añadir_proveedor">Añadir Proveedor</string>
    <string name="menu_añadir_cliente">Añadir Cliente</string>
    <string name="menu_añadir_tipo_producto">Añadir Tipo de Producto</string>
    <string name="menu_transferencias">Transferencias</string>
    <string name="menu_transacciones">Transacciones</string>
    <string name="menu_sin_factura">Sin Factura</string>
    <string name="menu_factura_entrada">Factura Entrada</string>
    <string name="menu_factura_salida">Factura Salida</string>
    <string name="menu_editar_cantidad_tipos_de_productos">Editar cantidad</string>
    <string name="menu_editar_sin_factura">Editar Factura</string>
    <string name="menu_editar_factura_entrada">Editar Factura Entrada</string>
    <string name="menu_editar_factura_salida">Editar Factura Salida</string>
    <string name="menu_barcode_scan">Barcode Scan del Producto</string>
    <string name="menu_barcode_scan_producto">Barcode Scan del Producto</string>
    <string name="menu_barcode_scan_editar_transferencia">Barcode Scan Transferencia</string>
    <string name="menu_barcode_scan_factura_entrada">Escaner Factura de Entrada</string>
    <string name="menu_barcode_scan_factura_salida">Escaner Factura de Salida</string>
    <string name="menu_alertas_almacenes">Alertas por almacén</string>
    <string name="menu_proveedor_precio_compra">Precio de compra por proveedor</string>
    <string name="menu_cliente_precio_venta">Precio de venta por cliente</string>
    <string name="menu_elegir_producto">Elegir Producto</string>
    <string name="menu_elegir_producto_anadir">Elegir producto</string>
    <string name="menu_barcode_scan_anadir">Barcode Scan del Producto</string>
    <string name="menu_elegir_producto_remover">Elegir Producto</string>
    <string name="menu_barcode_scan_remover">Barcode Scan del Producto</string>
    <string name="menu_elegir_producto_factura_entrada">Elegir Producto</string>
    <string name="menu_elegir_producto_factura_salida">Elegir Producto</string>
    <string name="menu_salir">Salir</string>
    <string name="menu_camara">Camara</string>
    <string name="Inventory_items">Articulos en Inventario</string>
    <string name="Inventory_values">Valor de inventario ($)</string>
    <string name="statistics">+ Estadísticas</string>
    <string name="Add_inventory">Añadir Inventario</string>
    <string name="Add_data">Añadir Datos</string>
    <string name="remove_inventory">Remover Inventario</string>
    <string name="Inventory">Inventario</string>
    <string name="add_data">Agregar datos</string>
    <string name="ic_remove_inventory">Remover Inventario</string>
    <string name="start">Inicio</string>
    <string name="transactions"> Mis transacciones</string>
    <string name="transfers"> Mis transferencias</string>
    <string name="ic_add_inventory">Agregar inventario</string>
    <string name="data">Mis datos</string>
    <string name="add_transfer">Añadir transferencia</string>
    <string name="list">Lista</string>
    <string name="export_data">Exportar datos</string>
    <string name="close_application">Cerrar Aplicación</string>
    <string name="statistics2">Estadística</string>
    <string name="Overview">Visión General</string>
    <string name="Warehouse_inventory">Inventario por almacén</string>
    <string name="Margins">Márgenes</string>
    <string name="Sales_to_customers">Ventas a clientes</string>
    <string name="Inventory_by_product_type">Inventario por tipo de producto</string>
    <string name="Purchases_by_supplier">Compras por proveedor</string>
    <string name="Purchases_by_date">Compras por fecha</string>
    <string name="Sales_by_date">Ventass por fecha</string>
    <string name="Inventories_by_date">Inventarios por fecha</string>
    <string name="Invoices_by_date">Facturas por fecha</string>
    <string name="Analysis">Analisis</string>
    <string name="Product_sales_by_date">Ventas de producto por fecha</string>
    <string name="Export_to_CSV">Exportar a CSV</string>
    <string name="Export_to_PDF">Exportar a PDF</string>
    <string name="warehouses">Almacenes</string>
    <string name="types_of_products">Tipos de productos</string>
    <string name="Products">Productos</string>
    <string name="Suppliers">Proveedores</string>
    <string name="Customers">Clientes</string>
    <string name="Transactions">Transacciones</string>
    <string name="Transfers">Transferencias</string>
    <string name="Alerts">Alertas</string>
    <string name="Inventories">Inventarios</string>
    <string name="safe_or_send">Guardar o enviar el fichero</string>
    <string name="question_safe_or_send">¿Quiere guardar el fichero o enviarlo por mail?</string>
    <string name="safe">GUARDAR EN MI DISPOSITIVO</string>
    <string name="send">ENVIAR POR EMAIL</string>
    <string name="goBack">VOLVER</string>
    <string name="input_bills">Facturas de entrada</string>
    <string name="exit_bills">Facturas de salida</string>
    <string name="search">Buscar</string>
    <string name="preferences">Preferencias</string>
    <string name="bills">Facturas</string>
    <string name="name_company">Nombre de empresa</string>
    <string name="name_company_message">Definir el nombre de la empresa que desea que se presente en las facturas</string>
    <string name="details_company_1">Detalles de la empresa - Línea 1</string>
    <string name="details_company_2">Detalles de la empresa - Línea 2</string>
    <string name="id_bills">Id de factura automatico</string>
    <string name="id_bills_message">Sugerir un nuevo ID de factura</string>
    <string name="prefix_id_bills">Prefijo para el ID de factura</string>
    <string name="prefix">Prefijo:</string>
    <string name="start_automatic_numeration">Iniciar la numeración automatica en ...</string>
    <string name="start_bills">Facturas entradas: 1</string>
    <string name="end_bills">Facturas salidas: 1</string>
    <string name="choice_money">Elegir la moneda a utilizar</string>
    <string name="select_money">Moneda seleccionada</string>
    <string name="date_of_expiration">Fecha de expiración</string>
    <string name="date_of_expirtation_message">Mis productos tienen fecha de caducidad. Tenga en cuenta que las transacciones
    de salida serán manejados automaticamente como F.I.F.O.(First In First Out)</string>
    <string name="data_synchronization">Sincronización de datos</string>
    <string name="automatic_synchronization">Sincronización automatica</string>
    <string name="automatic_synchronization_message">Sincronizar automaticamente cuando la app se inicia o cuando se cierra
    y a intervalos especificos(definir abajo)</string>
    <string name="data_synchronization_message">Sincronizar automaticamente cuando la aplicación abra</string>
    <string name="data_synchronization_message2">Sincronizar automaticamente antes del cierre de la aplicación</string>
    <string name="sync_my_data">Sincronizar mis datos</string>
    <string name="sync_my_data_message">Una vez al día</string>
    <string name="send_to_cloud">Enviar a la nube</string>
    <string name="send_to_cloud_message">ÚLtimos 7 días</string>
    <string name="sync_with_cloud">Sincronizar con la nube</string>
    <string name="sync_with_cloud_message">Siempre envía datos a la nube después de añadir o editar</string>
    <string name="sage_image_cloud">Guardar imagenes en la nube</string>
    <string name="notifications">Notificaciones</string>
    <string name="receive_notifications">Recibir notificaciones</string>
    <string name="receive_notifications_message">Recibir notificaciones al utilizar el portal web o niticias sobre la app</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="placeholder_nombre_almacen">Escriba el nombre del almacén</string>
    <string name="placeholder_dirección_almacen">Escriba la dirección del almacén</string>
    <string name="placeholder_usuario_responsable">Id</string>
    <string name="placeholder_id_almacen">Id</string>
    <string name="placeholder_estado_almacen">1</string>
    <string name="button_send">Enviar</string>
    <string name="textView_nombre_almacen">NOMBRE DEL ALMACÉN</string>
    <string name="textView_direccion_almacen">DIRECCIÓN DEL ALMACÉN</string>
    <string name="textView_estado_almacen">Estado del almacén</string>
    <string name="textView_usuario_responsable">USUARIO RESPONSABLE</string>
    <string name="item_label">Elija una opción</string>
    <string name="placeholder_nombre_producto">Escriba el nombre del producto</string>
    <string name="placeholder_peso_producto">Escriba el peso del producto</string>
    <string name="placeholder_volumen_producto">Escriba el volumen del producto</string>
    <string name="textView_nombre_producto">NOMBRE DEL PRODUCTO</string>
    <string name="textView_peso_producto">PESO DEL PRODUCTO [kg]</string>
    <string name="textView_volumen_producto">VOLUMEN DEL PRODUCTO [m\u00B3]</string>
    <string name="textView_imagen">IMAGEN DEL PRODUCTO</string>
    <string name="textView_tipo_producto">TIPO DE PRODUCTO</string>
    <string name="boton_imagen">Insertar Imagen</string>
    <string name="textView_codigo_barra_producto">CÓDIGO DE BARRA</string>
    <string name="placeholder_codigo_barra_producto">Escriba el código de barra del producto</string>
    <string name="textView_codigo_barra_embalaje">CÓDIGO DE BARRA DE EMBALAJE</string>
    <string name="placeholder_codigo_barra_embalaje">Escriba el código de barra del embalaje</string>
    <string name="textView_unidades_embalaje">UNIDADES DE EMBALAJE</string>
    <string name="placeholder_unidades_embalaje">Escriba el número de unidades del embalaje</string>
    <string name="save_image">Guardar imagen</string>
    <string name="take_image">Imagenes</string>
    <string name="Alerts_per_warehouses">Alertas por Almacén</string>
    <string name="Buy_price_per_suppliers">Precio de compra por Proveedores</string>
    <string name="Sell_price_per_customers">Precio de Venta por Clientes</string>
    <string name="title_alerts_warehouses">ALERTAS POR ALMACÉN</string>
    <string name="title_alerts">ALERTAS</string>
    <string name="hint_precio_compra">Ingrese el precio</string>
    <string name="title_suppliers_buy_price">PRECIOS DE COMPRA POR PROVEEDOR</string>
    <string name="title_suppliers">PROVEEDORES</string>
    <string name="almacenes">Almacenes</string>
    <string name="tipos_de_producto">Tipos de Producto</string>
    <string name="productos">Productos</string>
    <string name="proveedores">Proveedores</string>
    <string name="clientes">Clientes</string>
    <string name="factura_entrada">Factura Entrada</string>
    <string name="factura_salida">Factura Salida</string>
    <string name="sin_factura">Sin Factura</string>
</resources>