<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_inicio">

    <fragment
        android:id="@+id/nav_inicio"
        android:name="com.seba.mitantonavigationdrawer.ui.inicio.InicioFragment"
        android:label="@string/menu_inicio"
        tools:layout="@layout/fragment_inicio" >
        <action
            android:id="@+id/action_nav_inicio_to_nav_statistics"
            app:destination="@id/nav_statistics" />
        <action
            android:id="@+id/action_nav_inicio_to_nav_exportar_datos"
            app:destination="@id/nav_exportar_datos" />
        <action
            android:id="@+id/action_nav_inicio_to_nav_preferencias"
            app:destination="@id/nav_preferencias" />
        <action
            android:id="@+id/action_nav_inicio_to_nav_añadir_datos"
            app:destination="@id/nav_añadir_datos" />
    </fragment>

    <fragment
        android:id="@+id/nav_exportar_datos"
        android:name="com.seba.mitantonavigationdrawer.ui.exportarDatos.ExportarDatosFragment"
        android:label="@string/menu_exportar_datos"
        tools:layout="@layout/fragment_exportar_datos" >
        <action
            android:id="@+id/action_nav_exportar_datos_to_nav_inicio"
            app:destination="@id/nav_inicio" />
    </fragment>

    <fragment
        android:id="@+id/nav_preferencias"
        android:name="com.seba.mitantonavigationdrawer.ui.preferencias.PreferenciasFragment"
        android:label="@string/menu_preferencias"
        tools:layout="@layout/fragment_preferencias" >
        <action
            android:id="@+id/action_nav_preferencias_to_nav_inicio"
            app:destination="@id/nav_inicio" />
    </fragment>

    <fragment
        android:id="@+id/nav_statistics"
        android:name="com.seba.mitantonavigationdrawer.ui.estadística.EstadisticaFragment"
        android:label="@string/statistics2"
        tools:layout="@layout/fragment_estadistica" >
        <action
            android:id="@+id/action_nav_statistics_to_nav_inicio"
            app:destination="@id/nav_inicio" />
    </fragment>


    <fragment
        android:id="@+id/nav_añadir_almacen"
        android:name="com.seba.mitantonavigationdrawer.ui.añadirAlmacen.AnadirAlmacenFragment"
        android:label="@string/menu_añadir_almacen"
        tools:layout="@layout/fragment_anadir_almacen" >

        <action
            android:id="@+id/action_nav_añadir_almacen_to_nav_inicio3"
            app:destination="@id/nav_inicio" />
    </fragment>

    <fragment
        android:id="@+id/nav_añadir_datos"
        android:name="com.seba.mitantonavigationdrawer.ui.añadirDatos.AnadirDatosFragment"
        android:label="@string/menu_inicio"
        tools:layout="@layout/fragment_anadir_datos" >
        <action
            android:id="@+id/action_nav_añadir_datos_to_nav_añadir_almacen"
            app:destination="@id/nav_añadir_almacen" />
        <action
            android:id="@+id/action_nav_añadir_datos_to_nav_añadir_producto"
            app:destination="@id/nav_añadir_producto" />
    </fragment>

    <fragment
        android:id="@+id/nav_añadir_producto"
        android:name="com.seba.mitantonavigationdrawer.ui.añadirProducto.AnadirProductoFragment"
        android:label="@string/menu_añadir_producto"
        tools:layout="@layout/fragment_anadir_producto" >
    </fragment>

</navigation>