<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="200dp"
    android:background="@color/cream"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="250dp"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="20sp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintVertical_bias="0.05"
        android:text="@string/safe_or_send"/>

    <TextView
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4"
        android:text="@string/question_safe_or_send"/>

    <TextView
        android:layout_width="200dp"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/light_green"
        app:layout_constraintVertical_bias="0.6"
        android:text="@string/safe"/>

    <TextView
        android:layout_width="200dp"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/light_green"
        app:layout_constraintVertical_bias="0.79"
        app:layout_constraintHorizontal_bias="0.55"
        android:text="@string/send"/>

    <TextView
        android:id="@+id/tvGoBackExport"
        android:layout_width="200dp"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/light_green"
        app:layout_constraintVertical_bias="1"
        android:text="@string/goBack"/>

</androidx.constraintlayout.widget.ConstraintLayout>