<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.añadirProducto.AnadirProductoFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:longClickable="true"
            android:orientation="vertical"
            android:focusableInTouchMode="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:focusable="true">


            <TextView
                android:id="@+id/tvNombreProducto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="110dp"
                android:layout_marginVertical="30dp"
                android:text="@string/textView_nombre_producto"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etNombreProducto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="90dp"
                android:gravity="center"
                android:hint="@string/placeholder_nombre_producto"
                android:inputType="text"
                android:backgroundTint="@color/color_list"
                android:textColor="@color/black"
                android:textColorHint="@color/color_list"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvPesoProducto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="110dp"
                android:layout_marginVertical="30dp"
                android:text="@string/textView_peso_producto"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etPesoProducto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="90dp"
                android:hint="@string/placeholder_peso_producto"
                android:backgroundTint="@color/color_list"
                android:inputType="numberDecimal"
                android:gravity="center"
                android:textColor="@color/black"
                android:textColorHint="@color/color_list"
                android:textSize="15sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/tvVolumenProducto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="110dp"
                android:layout_marginVertical="30dp"
                android:text="@string/textView_volumen_producto"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/etVolumenProducto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="90dp"
                android:hint="@string/placeholder_volumen_producto"
                android:backgroundTint="@color/color_list"
                android:inputType="numberDecimal"
                android:gravity="center"
                android:textColor="@color/black"
                android:textColorHint="@color/color_list"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvTipoDeProducto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="120dp"
                android:layout_marginVertical="30dp"
                android:text="@string/textView_tipo_producto"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:focusableInTouchMode="true">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ListaDesplegableTipoDeProducto"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="70dp"
                    style = "@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                    <AutoCompleteTextView
                        android:id="@+id/tvAutoCompleteTipoDeProducto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Opciones"
                        android:text="@string/item_label"
                        android:inputType="none"/>


                </com.google.android.material.textfield.TextInputLayout>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <TextView
                android:id="@+id/tvImagenProducto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="110dp"
                android:layout_marginTop="30dp"
                android:text="@string/textView_imagen"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/ivImagen"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="150dp"
                android:src="@drawable/image_select"/>

            <ProgressBar
                android:id="@+id/pbProducto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style ="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_gravity="center"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNombreImagen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="80dp"

                android:hint="Nombre de imagen"/>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonTomar"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/light_green"
                    android:layout_marginHorizontal="70dp"
                    android:layout_marginVertical="30dp"
                    android:text="@string/take_image" />

            <Button
                android:id="@+id/buttonImagen"
                android:layout_width="100dp"
                android:backgroundTint="@color/light_green"
                android:layout_height="match_parent"
                android:layout_marginVertical="30dp"
                android:text="@string/upload_image" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <TextView
                android:id="@+id/tvCodigoBarraProducto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="130dp"
                android:layout_marginVertical="30dp"
                android:text="@string/textView_codigo_barra_producto"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/etCodigoBarraProducto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="90dp"
                android:hint="@string/placeholder_codigo_barra_producto"
                android:backgroundTint="@color/color_list"
                android:inputType="text"
                android:gravity="center"
                android:textColor="@color/black"
                android:textColorHint="@color/color_list"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvCodigoBarraEmbalaje"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="90dp"
                android:layout_marginVertical="30dp"
                android:text="@string/textView_codigo_barra_embalaje"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/etCodigoBarraEmbalaje"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="90dp"
                android:hint="@string/placeholder_codigo_barra_embalaje"
                android:backgroundTint="@color/color_list"
                android:inputType="text"
                android:gravity="center"
                android:textColor="@color/black"
                android:textColorHint="@color/color_list"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvUnidadesEmbalaje"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="110dp"
                android:layout_marginVertical="30dp"
                android:text="@string/textView_unidades_embalaje"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/etUnidadesEmbalaje"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="90dp"
                android:hint="@string/placeholder_unidades_embalaje"
                android:backgroundTint="@color/color_list"
                android:inputType="number"
                android:gravity="center"
                android:textColor="@color/black"
                android:textColorHint="@color/color_list"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonProducto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="160dp"
                android:layout_marginVertical="40dp"
                android:backgroundTint="@color/light_green"
                android:text="@string/button_send" />


        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>